<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBookInfoNightBackground"
    tools:context="com.example.android.booklisting.Activities.BookInfoActivity">

    <LinearLayout
        style="@style/book_info_layout_style"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/info_book_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:src="@drawable/ic_book" />

            <TextView
                android:id="@+id/info_book_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="@dimen/padding_16dp"
                android:textColor="@color/colorBookInfoNightText"
                android:textSize="@dimen/book_title_text_size"
                tools:text="THE WORLD IN VIEW" />

        </LinearLayout>

        <TextView
            android:id="@+id/info_description_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/info_book_description"
            android:textColor="@color/colorBookInfoNightText"
            android:textSize="@dimen/book_description_label"
            tools:text="DESCRIPTION" />

        <TextView
            android:id="@+id/info_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:paddingTop="@dimen/padding_8dp"
            android:text="@string/info_book_description_text"
            android:textColor="@color/colorBookInfoNightText"
            android:textSize="@dimen/book_description_text"
            tools:text="This text is to describe the content of the book... so if you dont know..." />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_16dp">

            <TextView
                android:id="@+id/info_book_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/info_book_type"
                android:textColor="@color/colorBookInfoNightText"
                android:textSize="@dimen/book_captions_text"
                tools:text="type: Magazines" />

            <TextView
                android:id="@+id/info_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingLeft="@dimen/padding_16dp"
                android:text="@string/info_book_author"
                android:textColor="@color/colorBookInfoNightText"
                android:textSize="@dimen/book_captions_text"
                tools:text="author: J.M Jaden" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_16dp">

            <TextView
                android:id="@+id/info_mature_rating_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_book_mature_rating_label"
                android:textColor="@color/colorBookInfoNightText"
                android:textSize="@dimen/book_captions_text"
                tools:text="mature rating: " />

            <TextView
                android:id="@+id/info_mature_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_book_mature_rating"
                android:textColor="@color/colorBookInfoNightText"
                android:textSize="@dimen/book_captions_text"
                tools:text="not mature" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_16dp">

            <TextView
                android:id="@+id/info_viewability_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_book_viewability_label"
                android:textColor="@color/colorBookInfoNightText"
                android:textSize="@dimen/book_captions_text"
                tools:text="Viewability: " />

            <TextView
                android:id="@+id/info_viewability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_book_viewability"
                android:textColor="@color/colorBookInfoNightText"
                android:textSize="@dimen/book_captions_text"
                tools:text="Free" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/download_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_16dp">

            <TextView
                android:id="@+id/info_downloadable_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/info_book_downloadable_label"
                android:textColor="@color/colorBookInfoNightText"
                android:textSize="@dimen/book_description_label"
                tools:text="downloadable links:" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/padding_8dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/info_epub_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_book_epub_label"
                        android:textColor="@color/colorBookInfoNightText"
                        android:textSize="@dimen/book_captions_text"
                        tools:text="epub: " />

                    <TextView
                        android:id="@+id/info_epub_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_book_epub_link"
                        android:textColor="@color/colorClickableLinks"
                        tools:text="click here" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="end"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/padding_16dp">

                    <TextView
                        android:id="@+id/info_pdf_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_book_pdf_label"
                        android:textColor="@color/colorBookInfoNightText"
                        android:textSize="@dimen/book_captions_text"
                        tools:text="pdf: " />

                    <TextView
                        android:id="@+id/info_pdf_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_book_pdf_link"
                        android:textColor="@color/colorClickableLinks"
                        tools:text="click here" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/padding_16dp">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/info_preview_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_book_preview_label"
                        android:textColor="@color/colorBookInfoNightText"
                        android:textSize="@dimen/book_captions_text"
                        tools:text="preview link: " />

                    <TextView
                        android:id="@+id/info_preview_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_book_preview_link"
                        android:textColor="@color/colorClickableLinks"
                        tools:text="click here" />
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/padding_16dp">

                    <TextView
                        android:id="@+id/info_read_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_book_read_label"
                        android:textColor="@color/colorBookInfoNightText"
                        android:textSize="@dimen/book_captions_text"
                        tools:text="read link: " />

                    <TextView
                        android:id="@+id/info_read_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/info_book_read_link"
                        android:textColor="@color/colorClickableLinks"
                        tools:text="click here" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBookInfoNightText"
                android:textSize="@dimen/book_description_label"
                android:layout_gravity="center"
                android:text="Buy Link:  "
                tools:text="Buy Link: "/>
            <TextView
                android:id="@+id/buy_link_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/colorClickableLinks"
                android:text="@string/free"
                tools:text="@string/info_book_purchase_link_title"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
